# hyperdeck-monitor

./: .gitignore  .typos.toml  Cargo.toml  build.rs  flake.nix  hyperdeck-monitor.service  index.ts  package-deb.sh  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
deb-build/DEBIAN/: control  postinst
deb-build/etc/systemd/system/: hyperdeck-monitor.service
frontend/: .gitignore  Cargo.toml  build.rs  index.html
frontend/assets/: manifest.json  sw.js
frontend/src/: app.rs  lib.rs  main.rs
monitor/: Cargo.toml  index.ts  package-lock.json  tsconfig.json
monitor/src/: api.rs  main.rs
monitor/src/api/: message.rs
src/: api.rs  main.rs  storage.rs
src/api/: message.rs  ws.rs
