[package]
name = "hyperdeck_monitor_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
js-sys = "0.3.69"
log = "0.4"
serde = { version = "1", features = ["derive"] }
hrtime = "0.2.0"
wasm-timer = "0.2.5"
ewebsock = "0.5.0"
serde_json = "1.0.117"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
